# plang

./: .gitignore  Makefile.am  README  README.md  configure.ac  index.html
doc/: Doxyfile  Makefile.am  arith_8c_source.html  builtins_8c_source.html  compiler_8c_source.html  context-priv_8h_source.html  context_8c_source.html  context_8h_source.html  database-priv_8h_source.html  database_8c_source.html  database_8h_source.html  dcg_8c_source.html  disassembler_8c_source.html  errors_8c_source.html  errors_8h_source.html  execution-model.dox  execution-model_8dox.html  execution_model.html  files.html  fuzzy_8c_source.html  group__arithmetic.html  group__assignment.html  group__class__iostream.html  group__class__stdin.html  group__class__stdout.html  group__classes__and__objects.html  group__clause__handling.html  group__context.html  group__create__and__decompose.html  group__database.html  group__directives.html  group__errors.html  group__fuzzy__logic.html  group__logic__and__control.html  group__module__findall.html  group__module__shell.html  group__module__test.html  group__module__words.html  group__modules.html  group__predicates.html  (+46 more)
examples/: Makefile.am  hello1.lp  hello2.lp  hello3.lp  hello4.lp  hello5.lp  hello6.lp  hello7.lp
include/: Makefile.am
include/plang/: Makefile.am  context.h  database.h  errors.h  p-term.h  term.h
src/: Makefile.am
src/frontend/: .gitignore  Makefile.am  main.c  plang.1
src/imports/: Makefile.am  findall.dox  findall.lp  fuzzy.dox  fuzzy.lp  iostream.dox  iostream.lp  modules.dox  shell.dox  shell.lp  stderr.lp  stdin.dox  stdin.lp  stdout.dox  stdout.lp  test.dox  test.lp
src/libplang/: .gitignore  Makefile.am  arith.c  builtins.c  compiler.c  context-priv.h  context.c  database-priv.h  database.c  dcg.c  disassembler.c  errors-priv.h  errors.c  fuzzy.c  inst-priv.h  interpreter.c  io.c  lexer.l  p-term.c  parser-priv.h  parser.y  rbtree-priv.h  rbtree.c  sort.c  term-priv.h  term.c
src/words/: Makefile.am  words.c  words.lp
tests/: Makefile.am
tests/common/: testcase.h
tests/libplang/: .gitignore  Makefile.am  test-builtins.c  test-compiler.c  test-database.c  test-rbtree.c  test-term.c  testcase.h
tests/plang/: Makefile.am  test-arith.lp  test-assign.lp  test-class.lp  test-compare.lp  test-compose.lp  test-dcg.lp  test-dynamic.lp  test-findall.lp  test-fuzzy.lp  test-index.lp  test-one-way.lp  test-sort.lp  test-type.lp  test-words.lp  testcase.lp
