importsdir = $(datadir)/plang/imports
imports_DATA = \
	findall.lp \
	fuzzy.lp \
	iostream.lp \
	shell.lp \
	stderr.lp \
	stdin.lp \
	stdout.lp

EXTRA_DOCS = \
	findall.dox \
	fuzzy.dox \
	iostream.dox \
	modules.dox \
	shell.dox \
	stdin.dox \
	stdout.dox

EXTRA_DIST = $(imports_DATA) $(EXTRA_DOCS)
